# nix-maid

./: .gitignore  LICENSE  default.nix  lib.nix  module.nix  test.nix  vars.nix
.github/workflows/: ci.yaml  docs.yaml
docs/: .gitignore  api.md  cookbook.md  index.md  installation.md  options.data.js  package-lock.json  package.json  readme.md  shell.nix  test.md
docs/.vitepress/: config.js
gsettings-declarative/: .envrc  default.nix  main.py  manifest.json  package.nix  pyproject.toml  shell.nix
gsettings-declarative/gsettings_declarative/: __init__.py  __main__.py
kconfig-declarative/: .envrc  CMakeLists.txt  manifest.json  package.nix  shell.nix
kconfig-declarative/src/: load.cpp  load.hpp  main.cpp
npins/: sources.json
src/: core.nix  docs.nix  file.nix  gsettings.nix  targets.nix  vars.nix
src/maid/: all-modules.nix  default.nix
src/maid/modules/: core.nix  file.nix  gsettings.nix  kconfig.nix  test-ldap.nix  test.nix
src/nixos/: default.nix
test/: default.nix  nixos.nix
