[project]
name = "gsettings-declarative"
version = "0.1.0"
# description = "A declarative tool for managing GNOME GSettings."
# authors = [
#     { name = "Your Name", email = "your.email@example.com" }
# ]
license = "MIT"
dependencies = [
    "pygobject",
    "colorama"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
gsettings-declarative = "gsettings_declarative:main"